--- a/tistoryapi/style.css
+++ b/tistoryapi/style.css
@@ -14,6 +14,12 @@ h1 {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+h6 {
+  color: #333;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 
 form {
   background-color: #fff;
